<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Todo List</string>
    <string name="name">Add New</string>
    <string name="text">Delete</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="save">Add</string>
    <string name="action_about">About</string>
    <string name="hint">Type your item name</string>
    <string name="author">Meghna Meghna (megh0011)</string>
    <string name="ok">OK</string>
</resources>
