<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
     <LinearLayout
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_margin="20dp">
    
      <Button
            android:id="@+id/updated"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginLeft ="2dip"
            android:layout_marginRight ="2dip"
            android:layout_marginTop ="10dip"
            android:layout_marginBottom ="10dip"
            android:text="@string/update" 
            android:background="@drawable/shape"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/cancelled"
            android:layout_width="120dp"
            android:layout_marginLeft ="2dip"
            android:layout_marginRight ="2dip"
            android:layout_marginTop ="10dip"
            android:layout_marginBottom ="10dip"
            android:layout_height="50dp"
            android:text="@string/cancel" 
            android:background="@drawable/shape"
            android:onClick="onClick"/>
    </LinearLayout> 
        <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="text" >
    </EditText>

</LinearLayout>
