<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_margin="20dp">

        <Button
            android:id="@+id/add"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/name" 
            android:layout_marginLeft ="2dip"
            android:layout_marginRight ="2dip"
            android:layout_marginTop ="10dip"
            android:layout_marginBottom ="10dip"
            android:background="@drawable/shape"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/delete"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="2dip"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="10dip"
            android:text="@string/text" 
            android:background="@drawable/shape"/>
        <Button
            android:id="@+id/update"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="2dip"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="10dip"
            android:text="@string/update" 
            android:background="@drawable/shape"/>
        
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />

</LinearLayout> 